--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'war'
 }
 
-group 'org.example'
+group 'com.example'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -27,8 +27,9 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 }
+
 
 test {
     useJUnitPlatform()
